--- a/src/main/resources/templates/cliente/cadastro.html
+++ b/src/main/resources/templates/cliente/cadastro.html
@@ -3,5 +3,35 @@
 
 <body>
 	<h1>Estou na página do Cadastro</h1>
+	<div class="panel-body">
+		<form th:Object="${cliente}" th:action="@{/cliente/salvar}"
+			method="post" class="form-horizontal" style="margin: 15px">
+			<div class="form-group">
+				<div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
+					<div th:each="detailError : ${#fields.detailedErrors()}">
+						<span th:text="${detailError.message}"></span>
+					</div>
+
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="nome">Nome:</label>
+				<div class="col-sm-10">
+					<input type="text" th:field="*{nome}" class="form-control"
+						id="nome" placeholder="Digite o Nome">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="cpf">Cpf:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" th:field="*{cpf}" id="cpf"
+						placeholder="Digite o Cpf">
+				</div>
+			</div>
+			<div class="form-group">
+				<button type="submit" class="btn bt-sm btn-primary">Salvar</button>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
