--- a/src/main/resources/templates/cliente/cadastro.html
+++ b/src/main/resources/templates/cliente/cadastro.html
@@ -15,19 +15,34 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<div class="col-sm-10">
+					<input type="text" th:field="*{id}" class="form-control" readonly="readonly"
+						id="id" >
+				</div>
+			</div>
+			<div class="form-group" th:classapend="${#fields.hasErrors('nome')} ? 'has-error'">
 				<label class="control-label col-sm-2" for="nome">Nome:</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{nome}" class="form-control"
 						id="nome" placeholder="Digite o Nome">
 				</div>
 			</div>
-			<div class="form-group">
+			
+			<div class="form-group" th:classapend="${#fields.hasErrors('cpf')} ? 'has-error'">
 				<label class="control-label col-sm-2" for="cpf">Cpf:</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" th:field="*{cpf}" id="cpf"
 						placeholder="Digite o Cpf">
 				</div>
 			</div>
+			
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="data">Data:</label>
+				<div class="col-sm-10">
+					<input type="date" class="form-control" th:field="*{data}" id="cpf"	>
+				</div>
+			</div>
+			
 			<div class="form-group">
 				<button type="submit" class="btn bt-sm btn-primary">Salvar</button>
 			</div>
