--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,10 +3,14 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 
-				<a href="/"> Home </a> <a href="/cliente"> Cliente </a>
-
-
+				<a href="/"> Home </a> - 
+				
+				<a href="/cliente"> Cliente </a> -
+				<a href="/cliente/cadastro "> Cliente Cadastro </a> -
+				<a href="/cliente/consulta/receita "> Cliente Consulta Receita</a>
+								
 			</div>
 		</div>
+		
 	</nav>
 </div>
